2009-02-27  Michael Stucki  <michael@typo3.org>

	* Fixed bug #3949: Files in typo3temp/GB have wrong permissions (thanks to Christian Kuhn)
	* Fixed bug #10131: Use TYPO3 encryption key in initial state of random byte generation (ported from TYPO3_4-2, thanks to Marcus Krause)
	* Follow-up to #10083: Constant styles.content.imgtext.separateRows has a wrong default value. This was changed accidentally during a bugfix on 2009-01-09. Reverting back to the old bahaviour. Thanks to Adrian Fischer for pointing this out!

2009-02-27  Ingo Renner  <ingo@typo3.org>

	* Fixed bug #10210: Admin tools > User Admin icons point to wrong user in Opera browser (credits David Steeb)
	* Fixed bug #10259: Link to CLI Script in Check DP->ReferenceIndex Script is wrong (credits Daniel Krupke)
	* Fixed bug #10560: element browser title length is hardcoded
	* Fixed bug #5618: Wrong cropping of multi-byte $TCA field (credits Michael Miousse)
	* Fixed bug #10511: simplify and speed up t3lib_div::trimExplode()

2009-02-27  Francois Suter  <francois@typo3.org>

	* Fixed bug #10417: Remove debugging code from sysext t3skin (thanks to Markus Krause)

2009-02-27  Benjamin Mack  <benni@typo3.org>

	* Fixed bug 10536: Hardcoded backend main dir in typo3/classes/class.typo3logo.php (Thanks to Christian Kuhn)
	* Fixed bug #3871: Hardcoded css for versioning symbol in list module (Thanks to Christian Kuhn)
	* Fixed bug #10490: Code cleanup/Bugfix: Add some sql_free_result to the admin_get_* functions (Thanks to Oliver Klee)

2009-02-27  Francois Suter  <francois@typo3.org>

	* Fixed bug #10516: Typos in the Core: change "accesible" to "accessible" (Thanks to Daniel Krupke)
	* Fixed bug #10313: Fileadmin-module wrongly allows creation of trailing dot directories on UTF8 FS (Thanks to Steffen Gebert). Actually this led to a complete rewrite of t3lib_basicFileFunctions::cleanFileName() method.

2009-02-25  Stanislas Rolland  <typo3@sjbr.ca>
