@@ -1,3 +1,7 @@
+2009-02-27  Francois Suter  <francois@typo3.org>
+
+	* Added feature #10333: Configurable Subcategories for ext_conf_template.txt and TS constant editor (thanks to Stefan Geith)
+
 2009-02-27  Michael Stucki  <michael@typo3.org>
 
 	* Fixed bug #3949: Files in typo3temp/GB have wrong permissions (thanks to Christian Kuhn)
